# streamlit-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  backend.dockerfile  example.env  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create-command.sh
.github/: CODEOWNERS
alembic/: env.py
alembic/versions/: d4867f3a4c0a_first_revision.py
docs/: ENV.md
ml_example/data/: interim.dvc  processed.dvc  raw.dvc
ml_example/fastapi_app/: main.py
ml_example/ml_training/data/: make_dataset.py
ml_example/ml_training/features/: build_features.py
ml_example/ml_training/models/: model_info.json  model_info_v3.json  serving_config.json
ml_example/ml_training/pipeline/: mlflow_registry.py  model_versions.py  predict.py  train.py
ml_example/ml_training/visualization/: plot_features.py
ml_example/reports/: prediction_logs.csv  training_predictions.csv
ml_example/streamlit_app/: app.py
pipelines/: azure-pipelines.yml  ci-tests.sh  ci.env
python_example/: backend_pre_start.py  initial_data.py  logger.py  main.py  utils.py  worker.py
python_example/api/: deps.py
python_example/api/api_v1/: api.py
python_example/api/api_v1/endpoints/: items.py  login.py  users.py  utils.py
python_example/core/: config.py  security.py
python_example/crud/: __init__.py  base.py  crud_item.py  crud_user.py
python_example/db/: base.py  init_db.py  session.py
python_example/models/: __init__.py  item.py  user.py
python_example/schemas/: __init__.py
resources/container_scripts/: celeryworker.dockerfile  worker-start.sh
scripts/: build_project_codespace.sh  format-imports.sh  format.sh  lint.sh  run_project.sh  test-cov-html.sh  test.sh  test_project.sh
tests/: conftest.py  test.env  test_app.py  test_logger.py  tests_pre_start.py
tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
tests/crud/: test_item.py  test_user.py
tests/utils/: item.py  user.py  utils.py
