[tool.poetry]
name = "streamlit-example"
version = "0.1.0"
description = "Unified FastAPI + Streamlit + ML project template"
authors = ["Project Maintainers"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
streamlit = "^1.38.0"
pydantic = "^2.8.0"
python-dotenv = "^1.0.1"
numpy = ">=1.26,<2.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
pyarrow = "^16.1.0"
lightgbm = "^4.5.0"
mlflow = "^2.16.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
ruff = "^0.6.1"
dvc = "^3.61.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"